hphp/hack/test/typecheck/dynamic_calls/dynamic_static_method3.php.exp
ERROR: File "dynamic_static_method3.php", line 8, characters 9-14:
Dynamic calls to static methods are banned. (Parsing[1002])
